--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- Assignment 03 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,9 +29,35 @@
 
 </head>
 
-<body>
+<body class="manrope">
     <!-- header section start -->
-     <header>
+     <header class="max-w-screen-xl mx-auto">
+
+        <!-- navbar content start -->
+        <nav class="py-5 px-3 lg:px-0">
+            <div class="flex items-center justify-between">
+            <div class="flex items-center">
+                <div><i class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-full p-2 -rotate-45 mr-2"></i></div>
+                <h3 class="text-3xl font-extrabold">Rinterio</h3>
+            </div>
+            <div class="hidden lg:block">
+                <ul class="flex justify-between items-center space-x-5 cursor-pointer text-base font-normal text-[#737373]">
+                    <li class="font-extrabold text-black">Home</li>
+                    <li>Services</li>
+                    <li>Portfolio</li>
+                    <li>Blogs</li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+            <div class="flex items-center space-x-5">
+                <i class="fa-solid fa-magnifying-glass rounded-full border-solid border-2 border-gray-400 p-2 hidden lg:block"></i>
+                <i class="fa-solid fa-cart-shopping rounded-full border-solid border-2 border-gray-400 p-2 hidden lg:block"></i>
+                <button class="btn hidden lg:block bg-[#ABEF5F] rounded-full text-lg font-bold">Book Consult <i class="fa-solid fa-arrow-right -rotate-45 bg-black text-white rounded-full p-1"></i></button>
+                <i class="fa-solid fa-bars rounded-full border-solid border-2 border-gray-400 p-2 lg:hidden"></i>
+            </div>
+        </div>
+        </nav>
+        <!-- navbar content end -->
 
      </header>
     <!-- header section end -->
@@ -47,6 +73,16 @@
 
      </footer>
     <!-- footer section end -->
-     
+
 </body>
 </html>
+
+
+
+<!-- 
+Github Repo Link: https://github.com/shafriki/Assignment_3
+
+
+
+Live Site link: https://shafriki.github.io/Assignment_3/
+-->
