--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rinterio</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/banner.png" type="image/x-icon">
 
     <!-- TailwindCSS and daisyUI CDN link -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -59,6 +59,15 @@
         </nav>
         <!-- navbar content end -->
 
+        <!-- banner section start -->
+         <div class="flex flex-col items-center mt-12 space-y-6">
+            <img src="./assets/banner.png" alt="" class="">
+            <h1 class="text-6xl text-center font-extrabold text-[#212121] w-4/5">A barn house of this design has a striking appearance</h1>
+            <p class="text-base font-medium text-[#494949] text-center w-4/5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+            <button class="btn hidden lg:block bg-[#ABEF5F80] rounded-full text-lg font-bold">View Details<i class="fa-solid fa-arrow-right -rotate-45 bg-[#ABEF5F] text-white rounded-full p-1 ml-1"></i></button>
+         </div>
+        <!-- banner section end -->
+
      </header>
     <!-- header section end -->
 
@@ -77,12 +86,3 @@
 </body>
 </html>
 
-
-
-<!-- 
-Github Repo Link: https://github.com/shafriki/Assignment_3
-
-
-
-Live Site link: https://shafriki.github.io/Assignment_3/
--->
