--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         <!-- navbar content end -->
 
         <!-- banner section start -->
-         <div class="flex flex-col items-center mt-12 space-y-6">
+         <div class="flex flex-col items-center mt-12 space-y-6 px-3">
             <img src="./assets/banner.png" alt="" class="">
-            <h1 class="text-6xl text-center font-extrabold text-[#212121] w-4/5">A barn house of this design has a striking appearance</h1>
-            <p class="text-base font-medium text-[#494949] text-center w-4/5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
-            <button class="btn hidden lg:block bg-[#ABEF5F80] rounded-full text-lg font-bold">View Details<i class="fa-solid fa-arrow-right -rotate-45 bg-[#ABEF5F] text-white rounded-full p-1 ml-1"></i></button>
+            <h1 class="text-2xl lg:text-6xl text-center font-extrabold text-[#212121] w-4/5">A barn house of this design has a striking appearance</h1>
+            <p class="text-sm font-medium text-[#494949] text-center lg:w-4/5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+            <button class="btn bg-[#ABEF5F80] rounded-full text-lg font-bold px-20 lg:px-6 border-solid border-1 border-[#ABEF5F]">View Details<i class="fa-solid fa-arrow-right -rotate-45 bg-[#ABEF5F] text-white rounded-full p-1 ml-1"></i></button>
          </div>
         <!-- banner section end -->
 
@@ -73,6 +73,42 @@
 
     <!-- main section start -->
      <main>
+        <!-- about section start -->
+         <section class="mt-32 bg-gray-100 relative">
+            <img src="./assets/Vector.png" alt="" class="absolute top-12 left-16 hidden lg:block">
+            <div class="grid grid-cols-1 lg:grid-cols-2 max-w-screen-xl mx-auto py-10 px-3 lg:px-0 lg:py-24 lg:space-x-6 space-y-5 lg:space-y-0">
+                <!-- text content -->
+                <div class="flex flex-col items-center lg:items-start space-y-5">
+                    <p class="text-base font-bold bg-white rounded-full px-4 py-1"><i class="fa-solid fa-arrow-right"></i>About Us</p>
+                    <h3 class="text-2xl lg:text-4xl font-bold text-center">We design thoughtful,<br> liveable spaces</h3>
+                    <p class="text-sm lg:text-base font-medium text-[#494949] text-center">The barn house captivates with its blend of rustic charm and 
+                    modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+                    <div class="flex items-center space-x-4 bg-white p-5 rounded-xl">
+                        <div><img src="./assets/commercial.png" alt=""></div>
+                        <div>
+                            <h5 class="text-xl font-extrabold">Commercial</h5>
+                            <p class="text-base font-medium text-[#737373] w-4/5">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                    </div>
+
+                    <div class="flex items-center space-x-4 bg-white p-5 rounded-xl">
+                        <div><img src="./assets/residential.png" alt=""></div>
+                        <div>
+                            <h5 class="text-xl font-extrabold">Residential</h5>
+                            <p class="text-base font-medium text-[#737373] w-4/5">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- image content -->
+                 <div>
+                    <img src="./assets/Rectangle.png" alt="">
+                 </div>
+            </div>
+
+         </section>
+        <!-- about section end -->
 
      </main>
     <!-- main section end -->
