--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     <!-- header section end -->
 
     <!-- main section start -->
-     <main>
+     <main class="bg-gray-100">
         <!-- about section start -->
-         <section class="mt-32 bg-gray-100 relative">
+         <section class="mt-32 relative">
             <img src="./assets/Vector.png" alt="" class="absolute top-12 left-16 hidden lg:block">
             <div class="grid grid-cols-1 lg:grid-cols-2 max-w-screen-xl mx-auto py-10 px-3 lg:px-0 lg:py-24 lg:space-x-6 space-y-5 lg:space-y-0">
                 <!-- text content -->
@@ -109,6 +109,51 @@
 
          </section>
         <!-- about section end -->
+
+        <!-- our works section start -->
+         <section class="">
+            <div class="max-w-screen-xl mx-auto flex flex-col items-center space-y-7 lg:py-24 px-3 lg:px-0">
+                <!-- text content -->
+                 <div class="flex flex-col items-center space-y-4">
+                    <p class="text-base font-bold bg-white rounded-full px-4 py-1"><i class="fa-solid fa-arrow-right"></i>How we works</p>
+                    <h3 class="text-2xl lg:text-4xl font-bold text-center">Our Work Process</h3>
+                    <p class="text-sm lg:text-base font-medium text-[#494949] lg:w-4/5 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                 </div>
+
+                 <!-- cards content -->
+                  <div class="grid grid-cols-1 lg:grid-cols-4 lg:space-x-5 space-y-5 lg:space-y-0">
+
+                    <!-- card one -->
+                    <div class="flex flex-col items-start bg-[#E7C1D3] rounded-xl space-y-3 p-5">
+                        <img src="./assets/concept.png" alt="">
+                        <h5 class="text-xl font-extrabold">Concept</h5>
+                        <p class="text-base font-medium text-[#494949] ">The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+
+                    <!-- card two -->
+                    <div class="flex flex-col items-start bg-[#EFDA6E] rounded-xl space-y-3 p-5">
+                        <img src="./assets/flow-chart.png" alt="">
+                        <h5 class="text-xl font-extrabold">Design Process</h5>
+                        <p class="text-base font-medium text-[#494949] ">The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+
+                    <!-- card three -->
+                    <div class="flex flex-col items-start bg-[#A4DAC3] rounded-xl space-y-3 p-5">
+                        <img src="./assets/vision.png" alt="">
+                        <h5 class="text-xl font-extrabold">Supervision</h5>
+                        <p class="text-base font-medium text-[#494949] ">The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+
+                    <!-- card four -->
+                    <div class="flex flex-col items-start bg-[#77AAEA] rounded-xl space-y-3 p-5">
+                        <img src="./assets/budget-planning.png" alt="">
+                        <h5 class="text-xl font-extrabold">Budget Planning</h5>
+                        <p class="text-base font-medium text-[#494949] ">The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                  </div>
+            </div>
+         </section>
+        <!-- our works section end -->
 
      </main>
     <!-- main section end -->
