portfolio section added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Rinterio</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="./assets/banner.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
 
     <!-- TailwindCSS and daisyUI CDN link -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -154,6 +154,57 @@
             </div>
          </section>
         <!-- our works section end -->
+
+        <!-- latest portfolio section start -->
+         <section class="bg-white">
+            <div class="max-w-screen-xl mx-auto py-28 px-3 lg:px-0">
+                <!-- text -->
+                <!-- text content -->
+                <div class="flex flex-col items-center space-y-4 mb-5">
+                    <p class="text-base font-bold bg-[#ABEF5F33] rounded-full px-4 py-1"><i class="fa-solid fa-arrow-right"></i>Explore our Latest works</p>
+                    <h3 class="text-2xl lg:text-4xl font-bold text-center">Our Latest Portfolio</h3>
+                    <p class="text-sm lg:text-base font-medium text-[#494949] lg:w-3/5 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                 </div>
+
+                <!-- collage -->
+                 <div class="grid grid-cols-1 lg:grid-cols-4 items-center lg:space-x-5 space-y-5">
+
+                    <!-- collage-one -->
+                    <div class="flex flex-col lg:flex-row items-center lg:col-span-3 lg:space-x-3 space-y-3 border-solid border-2 border-[#E9E9E9] rounded-xl p-4">
+                        <img src="./assets/img1.png" alt="">
+                        <div>
+                            <h5 class="text-2xl font-extrabold">Commercial</h5>
+                            <p class="text-base font-medium text-[#737373] lg:w-4/5">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern.</p>
+                            <a href="#" class="text-base font-bold">View Details <i class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-full p-2 -rotate-45 mr-2"></i></a>
+                        </div>
+                    </div>
+
+                    <!-- collage-two -->
+                    <div class="border-solid border-2 border-[#E9E9E9] rounded-xl p-4 col-span-1">
+                        <img src="./assets/img2.png" alt=""  class="lg:w-[326px] lg:h-[179.3px]">
+                    </div>
+
+                    <!-- collage-three -->
+                    <div class="border-solid border-2 border-[#E9E9E9] rounded-xl p-4">
+                        <img src="./assets/img4.png" alt="" class="mx-auto">
+                    </div>
+
+                    <!-- collage-four -->
+                    <div class="flex flex-col lg:flex-row items-center lg:col-span-2 lg:space-x-3  space-y-3 border-solid border-2 border-[#E9E9E9] rounded-xl p-4">
+                        <img src="./assets/img3.png" alt="">
+                        <div>
+                            <h5 class="text-2xl font-extrabold">Commercial</h5>
+                            <p class="text-base font-medium text-[#737373] lg:w-4/5">The barn house captivates with its blend of rustic charm and modern.</p>
+                            <a href="#" class="text-base font-bold">View Details <i class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-full p-2 -rotate-45 mr-2"></i></a>
+                        </div>
+                    </div>
+
+                    <!-- collage-five -->
+                    <div class="border-solid border-2 border-[#E9E9E9] rounded-xl p-4"><img src="./assets/img5.png" alt="" class="mx-auto"></div>
+                 </div>
+            </div>
+         </section>
+        <!-- latest portfolio section end -->
 
      </main>
     <!-- main section end -->
