discussion section added

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <!-- latest portfolio section start -->
          <section class="bg-white">
             <div class="max-w-screen-xl mx-auto py-28 px-3 lg:px-0">
-                <!-- text -->
+                
                 <!-- text content -->
                 <div class="flex flex-col items-center space-y-4 mb-5">
                     <p class="text-base font-bold bg-[#ABEF5F33] rounded-full px-4 py-1"><i class="fa-solid fa-arrow-right"></i>Explore our Latest works</p>
@@ -186,12 +186,12 @@
 
                     <!-- collage-three -->
                     <div class="border-solid border-2 border-[#E9E9E9] rounded-xl p-4">
-                        <img src="./assets/img4.png" alt="" class="mx-auto">
+                        <img src="./assets/img3.png" alt="" class="mx-auto">
                     </div>
 
                     <!-- collage-four -->
                     <div class="flex flex-col lg:flex-row items-center lg:col-span-2 lg:space-x-3  space-y-3 border-solid border-2 border-[#E9E9E9] rounded-xl p-4">
-                        <img src="./assets/img3.png" alt="">
+                        <img src="./assets/img4.png" alt="">
                         <div>
                             <h5 class="text-2xl font-extrabold">Commercial</h5>
                             <p class="text-base font-medium text-[#737373] lg:w-4/5">The barn house captivates with its blend of rustic charm and modern.</p>
@@ -205,6 +205,31 @@
             </div>
          </section>
         <!-- latest portfolio section end -->
+
+        <!-- discuss section start -->
+         <section class="bg-cover bg-no-repeat" style="background-image: url('./assets/bg.jpg');">
+            <div class="max-w-screen-xl mx-auto py-10 lgpy-28 px-3 lg:px-0">
+
+                 <!-- text content -->
+                 <div class="flex flex-col items-center space-y-4 mb-5">
+                    <p class="text-base font-bold bg-[#ABEF5F33] rounded-full px-4 py-1"><i class="fa-solid fa-arrow-right"></i>Let’s Connect</p>
+                    <h3 class="text-2xl lg:text-4xl font-bold text-center">Let’s Discuss Next Project</h3>
+                    <p class="text-sm lg:text-base font-medium text-[#494949] lg:w-3/5 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                 </div>
+
+                 <!-- message box -->
+                  <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
+                    <input type="text" placeholder="First Name*" class="p-4 rounded-full">
+                    <input type="text" placeholder="Last Name*" class="p-4 rounded-full">
+                    <input type="number" placeholder="Phone Number*" class="p-4 rounded-full">
+                    <input type="email" placeholder="Email Number*" class="p-4 rounded-full">
+                    <input type="text" placeholder="Write your message here" class="lg:col-span-2 py-28 rounded-2xl">
+                    <button class="lg:col-span-2 btn bg-[#ABEF5F] rounded-full text-xl font-extrabold">Send Mail <i class="fa-solid fa-arrow-right -rotate-45 bg-black text-white rounded-full p-1"></i></button>
+                  </div>
+                
+            </div>
+         </section>
+        <!-- discuss section end -->
 
      </main>
     <!-- main section end -->
