--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
         <!-- discuss section start -->
          <section class="bg-cover bg-no-repeat" style="background-image: url('./assets/bg.jpg');">
-            <div class="max-w-screen-xl mx-auto py-10 lgpy-28 px-3 lg:px-0">
+            <div class="max-w-screen-xl mx-auto py-10 lg:py-28 px-3 lg:px-0">
 
                  <!-- text content -->
                  <div class="flex flex-col items-center space-y-4 mb-5">
@@ -236,6 +236,23 @@
 
     <!-- footer section start -->
      <footer>
+        <section class="bg-black text-white">
+            <div class="flex flex-col items-center max-w-screen-xl mx-auto space-y-5 py-10 px-3 lg:px-0">
+                <div class="flex items-center">
+                    <div><i class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-full p-2 -rotate-45 mr-2"></i></div>
+                    <h3 class="text-3xl font-extrabold">Rinterio</h3>
+                </div>
+                <p class="text-[#737373] text-center lg:w-3/5 text-sm lg:text-base">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <div class="list-none flex flex-col lg:flex-row items-center space-y-4 lg:space-y-0 cursor-pointer lg:space-x-5">
+                    <li>Home</li>
+                    <li>Services</li>
+                    <li>Portfolio</li>
+                    <li>Blogs</li>
+                    <li>Contact Us</li>
+                </div>
+                <button class="btn text-base font-extrabold bg-[#ABEF5F] rounded-full px-20 lg:px-5">Book Consult <i class="fa-solid fa-arrow-right -rotate-45 bg-black text-white rounded-full p-1"></i></button>
+            </div>
+        </section>
 
      </footer>
     <!-- footer section end -->
