team section added

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
                     <!-- collage-one -->
                     <div class="flex flex-col lg:flex-row items-center lg:col-span-3 lg:space-x-3 space-y-3 border-solid border-2 border-[#E9E9E9] rounded-xl p-4">
-                        <img src="./assets/img1.png" alt="">
+                        <img src="./assets/img1.png" alt="" class="mx-auto">
                         <div>
                             <h5 class="text-2xl font-extrabold">Commercial</h5>
                             <p class="text-base font-medium text-[#737373] lg:w-4/5">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern.</p>
@@ -181,7 +181,7 @@
 
                     <!-- collage-two -->
                     <div class="border-solid border-2 border-[#E9E9E9] rounded-xl p-4 col-span-1">
-                        <img src="./assets/img2.png" alt=""  class="lg:w-[326px] lg:h-[179.3px]">
+                        <img src="./assets/img2.png" alt=""  class="lg:w-[326px] lg:h-[179.3px] mx-auto">
                     </div>
 
                     <!-- collage-three -->
@@ -191,7 +191,7 @@
 
                     <!-- collage-four -->
                     <div class="flex flex-col lg:flex-row items-center lg:col-span-2 lg:space-x-3  space-y-3 border-solid border-2 border-[#E9E9E9] rounded-xl p-4">
-                        <img src="./assets/img4.png" alt="">
+                        <img src="./assets/img4.png" alt="" class="mx-auto">
                         <div>
                             <h5 class="text-2xl font-extrabold">Commercial</h5>
                             <p class="text-base font-medium text-[#737373] lg:w-4/5">The barn house captivates with its blend of rustic charm and modern.</p>
@@ -205,6 +205,53 @@
             </div>
          </section>
         <!-- latest portfolio section end -->
+
+        <!-- team section start -->
+         <section>
+            <div class="max-w-screen-xl mx-auto py-10 lg:py-28 px-3 lg:px-0">
+
+                <!-- text content -->
+                <div class="flex flex-col items-center space-y-4">
+                    <p class="text-base font-bold bg-red-200 rounded-full px-4 py-1"><i class="fa-solid fa-arrow-right"></i>Our Team</p>
+                    <h3 class="text-2xl lg:text-4xl font-bold text-center">Our Creative Expertise</h3>
+                    
+                 </div>
+
+                <div class="grid grid-cols-1 lg:grid-cols-5 gap-5 mt-5">
+                    <div class="flex flex-col items-center border-solid border-2 border-gray-600 p-5 rounded-xl shadow-xl bg-white">
+                        <img src="./assets/p1.jpg" alt="" class="rounded-xl">
+                        <h3 class="text-xl font-bold my-2">Shafriki islam</h3>
+                        <p class="font-semibold text-red-500">Director</p>
+                    </div>
+
+                    <div class="flex flex-col items-center border-solid border-2 border-gray-600 p-5 rounded-xl shadow-xl bg-white">
+                        <img src="./assets/p2.jpg" alt="" class="rounded-xl">
+                        <h3 class="text-xl font-bold my-2">Shahriar Efti</h3>
+                        <p class="font-semibold text-red-500">Director</p>
+                    </div>
+
+                    <div class="flex flex-col items-center border-solid border-2 border-gray-600 p-5 rounded-xl shadow-xl bg-white">
+                        <img src="./assets/p3.png" alt="" class="rounded-xl lg:h-[266px]">
+                        <h3 class="text-lg font-bold my-2">Mohammad Nurullah</h3>
+                        <p class="font-semibold text-red-500">Director</p>
+                    </div>
+
+                    <div class="flex flex-col items-center border-solid border-2 border-gray-600 p-5 rounded-xl shadow-xl bg-white">
+                        <img src="./assets/p4.png" alt="" class="rounded-xl lg:h-[266px]">
+                        <h3 class="text-xl font-bold my-2">Soykot Azha</h3>
+                        <p class="font-semibold text-red-500">Director</p>
+                    </div>
+
+                    <div class="flex flex-col items-center border-solid border-2 border-gray-600 p-5 rounded-xl shadow-xl bg-white">
+                        <img src="./assets/p5.png" alt="" class="rounded-xl">
+                        <h3 class="text-xl font-bold my-2">Mijanur Rahman</h3>
+                        <p class="font-semibold text-red-500">Director</p>
+                    </div>
+                </div>
+
+            </div>
+         </section>
+         <!-- team section end -->
 
         <!-- discuss section start -->
          <section class="bg-cover bg-no-repeat" style="background-image: url('./assets/bg.jpg');">
