--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
         <!-- team section start -->
          <section>
-            <div class="max-w-screen-xl mx-auto py-10 lg:py-28 px-3 lg:px-0">
+            <div class="max-w-screen-xl mx-auto py-10 lg:py-28 px-20 lg:px-0">
 
                 <!-- text content -->
                 <div class="flex flex-col items-center space-y-4">
@@ -218,31 +218,31 @@
                  </div>
 
                 <div class="grid grid-cols-1 lg:grid-cols-5 gap-5 mt-5">
-                    <div class="flex flex-col items-center border-solid border-2 border-gray-600 p-5 rounded-xl shadow-xl bg-white">
+                    <div class="flex flex-col items-center border-solid border-2 border-gray-600 p-5 rounded-xl shadow-xl bg-white hover:bg-lime-200 transition-colors">
                         <img src="./assets/p1.jpg" alt="" class="rounded-xl">
                         <h3 class="text-xl font-bold my-2">Shafriki islam</h3>
                         <p class="font-semibold text-red-500">Director</p>
                     </div>
 
-                    <div class="flex flex-col items-center border-solid border-2 border-gray-600 p-5 rounded-xl shadow-xl bg-white">
+                    <div class="flex flex-col items-center border-solid border-2 border-gray-600 p-5 rounded-xl shadow-xl bg-white hover:bg-lime-200 transition-colors">
                         <img src="./assets/p2.jpg" alt="" class="rounded-xl">
                         <h3 class="text-xl font-bold my-2">Shahriar Efti</h3>
                         <p class="font-semibold text-red-500">Director</p>
                     </div>
 
-                    <div class="flex flex-col items-center border-solid border-2 border-gray-600 p-5 rounded-xl shadow-xl bg-white">
+                    <div class="flex flex-col items-center border-solid border-2 border-gray-600 p-5 rounded-xl shadow-xl bg-white hover:bg-lime-200 transition-colors">
                         <img src="./assets/p3.png" alt="" class="rounded-xl lg:h-[266px]">
                         <h3 class="text-lg font-bold my-2">Mohammad Nurullah</h3>
                         <p class="font-semibold text-red-500">Director</p>
                     </div>
 
-                    <div class="flex flex-col items-center border-solid border-2 border-gray-600 p-5 rounded-xl shadow-xl bg-white">
+                    <div class="flex flex-col items-center border-solid border-2 border-gray-600 p-5 rounded-xl shadow-xl bg-white hover:bg-lime-200 transition-colors">
                         <img src="./assets/p4.png" alt="" class="rounded-xl lg:h-[266px]">
                         <h3 class="text-xl font-bold my-2">Soykot Azha</h3>
                         <p class="font-semibold text-red-500">Director</p>
                     </div>
 
-                    <div class="flex flex-col items-center border-solid border-2 border-gray-600 p-5 rounded-xl shadow-xl bg-white">
+                    <div class="flex flex-col items-center border-solid border-2 border-gray-600 p-5 rounded-xl shadow-xl bg-white hover:bg-lime-200 transition-colors">
                         <img src="./assets/p5.png" alt="" class="rounded-xl">
                         <h3 class="text-xl font-bold my-2">Mijanur Rahman</h3>
                         <p class="font-semibold text-red-500">Director</p>
