added review section

--- a/index.html
+++ b/index.html
@@ -327,6 +327,147 @@
           </section>
          <!-- popular services section end -->
 
+         <!-- customer review section start -->
+          <section>
+            <div class="max-w-screen-xl mx-auto py-10 lg:py-28 px-3 lg:px-0">
+
+                <!-- text content -->
+                <div class="flex flex-col items-center space-y-4">
+                    <p class="text-base font-bold bg-lime-500 rounded-full px-4 py-1"><i class="fa-solid fa-arrow-right"></i>Testimonial</p>
+                    <h3 class="text-2xl lg:text-4xl font-bold text-center">See What Our Clint<span class="text-lime-600">'</span>s Says</h3>
+                 </div>
+
+                 <!-- clint's content -->
+                 <div class="grid grid-cols-1 lg:grid-cols-4 gap-5 mt-20">
+
+                    <!-- clint one -->
+                    <div class="bg-white p-5 rounded-xl shadow-xl">
+                        <div class="flex items-center gap-5 mb-7 bg-lime-500 p-3 rounded-xl">
+                            <!-- clint img -->
+                            <img src="./clints/c1.png" alt="" class="w-16 rounded-xl">
+                            <div>
+                                <!-- clint info -->
+                                <h3 class="text-xl font-bold text-white">Ahad</h3>
+                                <p class="font-semibold text-white">CEO Founder</p>
+                            </div>
+                        </div>
+                        <div class="mb-7">
+                            <!-- comment -->
+                            <p class="font-medium text-base text-gray-700">Professional team, delivered on time, exceeded expectations—our dream home became a reality. Highly recommended!</p>
+                        </div>
+                        <div class="flex items-center justify-between">
+                            <!-- star -->
+                            <div class="flex items-center mt-3">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7"> 
+                            </div>
+                            <!-- review -->
+                            <p class="text-base font-extrabold mt-4">Best Quality</p>
+                        </div>
+                    </div>
+
+
+                    <!-- clint two -->
+                    <div class="bg-white p-5 rounded-xl shadow-xl lg:relative lg:bottom-8">
+                        <div class="flex items-center gap-5 mb-7 bg-lime-500 p-3 rounded-xl">
+                            <!-- clint img -->
+                            <img src="./clints/c4.png" alt="" class="w-16 rounded-xl">
+                            <div>
+                                <!-- clint info -->
+                                <h3 class="text-xl font-bold text-white">Jahid</h3>
+                                <p class="font-semibold text-white">Fluter Developer</p>
+                            </div>
+                        </div>
+                        <div class="mb-7">
+                            <!-- comment -->
+                            <p class="font-medium text-base text-gray-700">Our office renovation was seamless. The team was skilled, timely, and committed to perfection in every detail.</p>
+                        </div>
+                        <div class="flex items-center justify-between">
+                            <!-- star -->
+                            <div class="flex items-center mt-3">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7"> 
+                            </div>
+                            <!-- review -->
+                            <p class="text-base font-extrabold mt-4">Awasome</p>
+                        </div>
+                    </div>
+
+
+                    <!-- clint three -->
+                    <div class="bg-white p-5 rounded-xl shadow-xl lg:relative lg:bottom-8">
+                        <div class="flex items-center gap-5 mb-7 bg-lime-500 p-3 rounded-xl">
+                            <!-- clint img -->
+                            <img src="./clints/c3.png" alt="" class="w-16 rounded-xl">
+                            <div>
+                                <!-- clint info -->
+                                <h3 class="text-xl font-bold text-white">Jahin</h3>
+                                <p class="font-semibold text-white">BCS Cader</p>
+                            </div>
+                        </div>
+                        <div class="mb-7">
+                            <!-- comment -->
+                            <p class="font-medium text-base text-gray-700">Attention to detail was exceptional. The construction was flawless, and the crew was extremely reliable and friendly.</p>
+                        </div>
+                        <div class="flex items-center justify-between">
+                            <!-- star -->
+                            <div class="flex items-center mt-3">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7"> 
+                            </div>
+                            <!-- review -->
+                            <p class="text-base font-extrabold mt-4">Greatful</p>
+                        </div>
+                    </div>
+
+
+                    <!-- clint four -->
+                    <div class="bg-white p-5 rounded-xl shadow-xl">
+                        <div class="flex items-center gap-5 mb-7 bg-lime-500 p-3 rounded-xl">
+                            <!-- clint img -->
+                            <img src="./clints/c2.png" alt="" class="w-16 rounded-xl">
+                            <div>
+                                <!-- clint info -->
+                                <h3 class="text-xl font-bold text-white">Rakib</h3>
+                                <p class="font-semibold text-white">Police Officer</p>
+                            </div>
+                        </div>
+                        <div class="mb-7">
+                            <!-- comment -->
+                            <p class="font-medium text-base text-gray-700">Impressive quality, efficient service, and great communication. The project was stress-free and well-managed throughout.</p>
+                        </div>
+                        <div class="flex items-center justify-between">
+                            <!-- star -->
+                            <div class="flex items-center mt-3">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7">
+                                <img src="./icons/star.png" alt="" class="w-7"> 
+                            </div>
+                            <!-- review -->
+                            <p class="text-base font-extrabold mt-4">Use Fully</p>
+                        </div>
+                    </div>
+
+
+
+                 </div>
+
+
+            </div>
+          </section>
+         <!-- customer review section start -->
+
         <!-- discuss section start -->
          <section class="bg-cover bg-no-repeat" style="background-image: url('./assets/bg.jpg');">
             <div class="max-w-screen-xl mx-auto py-10 lg:py-28 px-3 lg:px-0">
