some changed in review section

--- a/index.html
+++ b/index.html
@@ -371,19 +371,19 @@
 
 
                     <!-- clint two -->
-                    <div class="bg-white p-5 rounded-xl shadow-xl lg:relative lg:bottom-8">
-                        <div class="flex items-center gap-5 mb-7 bg-lime-500 p-3 rounded-xl">
+                    <div class="bg-red-500 p-5 rounded-xl shadow-xl lg:relative lg:bottom-8">
+                        <div class="flex items-center gap-5 mb-7 bg-white p-3 rounded-xl">
                             <!-- clint img -->
                             <img src="./clints/c4.png" alt="" class="w-16 rounded-xl">
                             <div>
                                 <!-- clint info -->
-                                <h3 class="text-xl font-bold text-white">Jahid</h3>
-                                <p class="font-semibold text-white">Fluter Developer</p>
+                                <h3 class="text-xl font-bold text-black">Jahid</h3>
+                                <p class="font-semibold text-black">Fluter Developer</p>
                             </div>
                         </div>
                         <div class="mb-7">
                             <!-- comment -->
-                            <p class="font-medium text-base text-gray-700">Our office renovation was seamless. The team was skilled, timely, and committed to perfection in every detail.</p>
+                            <p class="font-medium text-base text-white">Our office renovation was seamless. The team was skilled, timely, and committed to perfection in every detail.</p>
                         </div>
                         <div class="flex items-center justify-between">
                             <!-- star -->
@@ -395,25 +395,25 @@
                                 <img src="./icons/star.png" alt="" class="w-7"> 
                             </div>
                             <!-- review -->
-                            <p class="text-base font-extrabold mt-4">Awasome</p>
+                            <p class="text-base font-extrabold mt-4 text-white">Awasome</p>
                         </div>
                     </div>
 
 
                     <!-- clint three -->
-                    <div class="bg-white p-5 rounded-xl shadow-xl lg:relative lg:bottom-8">
-                        <div class="flex items-center gap-5 mb-7 bg-lime-500 p-3 rounded-xl">
+                    <div class="bg-red-500 p-5 rounded-xl shadow-xl lg:relative lg:bottom-8">
+                        <div class="flex items-center gap-5 mb-7 bg-white p-3 rounded-xl">
                             <!-- clint img -->
                             <img src="./clints/c3.png" alt="" class="w-16 rounded-xl">
                             <div>
                                 <!-- clint info -->
-                                <h3 class="text-xl font-bold text-white">Jahin</h3>
-                                <p class="font-semibold text-white">BCS Cader</p>
+                                <h3 class="text-xl font-bold text-black">Jahin</h3>
+                                <p class="font-semibold text-black">BCS Cader</p>
                             </div>
                         </div>
                         <div class="mb-7">
                             <!-- comment -->
-                            <p class="font-medium text-base text-gray-700">Attention to detail was exceptional. The construction was flawless, and the crew was extremely reliable and friendly.</p>
+                            <p class="font-medium text-base text-white">Attention to detail was exceptional. The construction was flawless, and the crew was extremely reliable and friendly.</p>
                         </div>
                         <div class="flex items-center justify-between">
                             <!-- star -->
@@ -425,7 +425,7 @@
                                 <img src="./icons/star.png" alt="" class="w-7"> 
                             </div>
                             <!-- review -->
-                            <p class="text-base font-extrabold mt-4">Greatful</p>
+                            <p class="text-base font-extrabold mt-4 text-white">Greatful</p>
                         </div>
                     </div>
 
