--- a/index.html
+++ b/index.html
@@ -81,14 +81,13 @@
                 <div class="flex flex-col items-center lg:items-start space-y-5">
                     <p class="text-base font-bold bg-white rounded-full px-4 py-1"><i class="fa-solid fa-arrow-right"></i>About Us</p>
                     <h3 class="text-2xl lg:text-4xl font-bold text-center">We design thoughtful,<br> liveable spaces</h3>
-                    <p class="text-sm lg:text-base font-medium text-[#494949] text-center">The barn house captivates with its blend of rustic charm and 
-                    modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    <p class="text-sm lg:text-base font-medium text-[#494949] text-center">At Rinterio, we pride ourselves on exceptional customer service, delivering high-quality construction solutions tailored to your unique needs and vision.</p>
 
                     <div class="flex items-center space-x-4 bg-white p-5 rounded-xl">
                         <div><img src="./assets/commercial.png" alt=""></div>
                         <div>
                             <h5 class="text-xl font-extrabold">Commercial</h5>
-                            <p class="text-base font-medium text-[#737373] w-4/5">The barn house captivates with its blend of rustic charm and modern.</p>
+                            <p class="text-base font-medium text-[#737373] w-4/5">Delivering superior commercial construction solutions for business success.</p>
                         </div>
                     </div>
 
@@ -96,7 +95,7 @@
                         <div><img src="./assets/residential.png" alt=""></div>
                         <div>
                             <h5 class="text-xl font-extrabold">Residential</h5>
-                            <p class="text-base font-medium text-[#737373] w-4/5">The barn house captivates with its blend of rustic charm and modern.</p>
+                            <p class="text-base font-medium text-[#737373] w-4/5">Creating dream homes with exceptional residential construction expertise.</p>
                         </div>
                     </div>
                 </div>
@@ -117,7 +116,7 @@
                  <div class="flex flex-col items-center space-y-4">
                     <p class="text-base font-bold bg-white rounded-full px-4 py-1"><i class="fa-solid fa-arrow-right"></i>How we works</p>
                     <h3 class="text-2xl lg:text-4xl font-bold text-center">Our Work Process</h3>
-                    <p class="text-sm lg:text-base font-medium text-[#494949] lg:w-4/5 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    <p class="text-sm lg:text-base font-medium text-[#494949] lg:w-4/5 text-center">Our work process involves detailed planning, precise design, expert construction, thorough quality checks, and timely project delivery for optimal results.</p>
                  </div>
 
                  <!-- cards content -->
@@ -127,28 +126,28 @@
                     <div class="flex flex-col items-start bg-[#E7C1D3] rounded-xl space-y-3 p-5">
                         <img src="./assets/concept.png" alt="">
                         <h5 class="text-xl font-extrabold">Concept</h5>
-                        <p class="text-base font-medium text-[#494949] ">The barn house captivates with its blend of rustic charm and modern.</p>
+                        <p class="text-base font-medium text-[#494949] ">Expert construction solutions transforming your vision into reality.</p>
                     </div>
 
                     <!-- card two -->
                     <div class="flex flex-col items-start bg-[#EFDA6E] rounded-xl space-y-3 p-5">
                         <img src="./assets/flow-chart.png" alt="">
                         <h5 class="text-xl font-extrabold">Design Process</h5>
-                        <p class="text-base font-medium text-[#494949] ">The barn house captivates with its blend of rustic charm and modern.</p>
+                        <p class="text-base font-medium text-[#494949] ">Conceptualize, design, plan, build, and deliver exceptional construction results.</p>
                     </div>
 
                     <!-- card three -->
                     <div class="flex flex-col items-start bg-[#A4DAC3] rounded-xl space-y-3 p-5">
                         <img src="./assets/vision.png" alt="">
                         <h5 class="text-xl font-extrabold">Supervision</h5>
-                        <p class="text-base font-medium text-[#494949] ">The barn house captivates with its blend of rustic charm and modern.</p>
+                        <p class="text-base font-medium text-[#494949] ">Overseeing projects to ensure quality, safety, and timely completion.</p>
                     </div>
 
                     <!-- card four -->
                     <div class="flex flex-col items-start bg-[#77AAEA] rounded-xl space-y-3 p-5">
                         <img src="./assets/budget-planning.png" alt="">
                         <h5 class="text-xl font-extrabold">Budget Planning</h5>
-                        <p class="text-base font-medium text-[#494949] ">The barn house captivates with its blend of rustic charm and modern.</p>
+                        <p class="text-base font-medium text-[#494949] ">Strategic budget planning to ensure cost-effective and efficient construction.</p>
                     </div>
                   </div>
             </div>
@@ -163,7 +162,7 @@
                 <div class="flex flex-col items-center space-y-4 mb-5">
                     <p class="text-base font-bold bg-[#ABEF5F33] rounded-full px-4 py-1"><i class="fa-solid fa-arrow-right"></i>Explore our Latest works</p>
                     <h3 class="text-2xl lg:text-4xl font-bold text-center">Our Latest Portfolio</h3>
-                    <p class="text-sm lg:text-base font-medium text-[#494949] lg:w-3/5 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    <p class="text-sm lg:text-base font-medium text-[#494949] lg:w-3/5 text-center">Explore our latest portfolio featuring innovative residential and commercial projects, showcasing cutting-edge design, quality craftsmanship, and successful client outcomes.</p>
                  </div>
 
                 <!-- collage -->
@@ -174,7 +173,7 @@
                         <img src="./assets/img1.png" alt="" class="mx-auto">
                         <div>
                             <h5 class="text-2xl font-extrabold">Commercial</h5>
-                            <p class="text-base font-medium text-[#737373] lg:w-4/5">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern.</p>
+                            <p class="text-base font-medium text-[#737373] lg:w-4/5">Delivering superior commercial construction solutions for business success.</p>
                             <a href="#" class="text-base font-bold">View Details <i class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-full p-2 -rotate-45 mr-2"></i></a>
                         </div>
                     </div>
@@ -193,8 +192,8 @@
                     <div class="flex flex-col lg:flex-row items-center lg:col-span-2 lg:space-x-3  space-y-3 border-solid border-2 border-[#E9E9E9] rounded-xl p-4">
                         <img src="./assets/img4.png" alt="" class="mx-auto">
                         <div>
-                            <h5 class="text-2xl font-extrabold">Commercial</h5>
-                            <p class="text-base font-medium text-[#737373] lg:w-4/5">The barn house captivates with its blend of rustic charm and modern.</p>
+                            <h5 class="text-2xl font-extrabold">Residential</h5>
+                            <p class="text-base font-medium text-[#737373] ">Creating dream homes with exceptional residential construction expertise.</p>
                             <a href="#" class="text-base font-bold">View Details <i class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-full p-2 -rotate-45 mr-2"></i></a>
                         </div>
                     </div>
@@ -334,7 +333,7 @@
                 <!-- text content -->
                 <div class="flex flex-col items-center space-y-4">
                     <p class="text-base font-bold bg-lime-500 rounded-full px-4 py-1"><i class="fa-solid fa-arrow-right"></i>Testimonial</p>
-                    <h3 class="text-2xl lg:text-4xl font-bold text-center">See What Our Clint<span class="text-lime-600">'</span>s Says</h3>
+                    <h3 class="text-2xl lg:text-4xl font-bold text-center">See What Our Clint<span class="text-red-600">'</span>s Says</h3>
                  </div>
 
                  <!-- clint's content -->
@@ -476,7 +475,7 @@
                  <div class="flex flex-col items-center space-y-4 mb-5">
                     <p class="text-base font-bold bg-[#ABEF5F33] rounded-full px-4 py-1"><i class="fa-solid fa-arrow-right"></i>Let’s Connect</p>
                     <h3 class="text-2xl lg:text-4xl font-bold text-center">Let’s Discuss Next Project</h3>
-                    <p class="text-sm lg:text-base font-medium text-[#494949] lg:w-3/5 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    <p class="text-sm lg:text-base font-medium text-[#494949] lg:w-3/5 text-center">Please reach out via email or message to discuss your construction needs. We’re committed to delivering exceptional quality and service.</p>
                  </div>
 
                  <!-- message box -->
@@ -504,7 +503,7 @@
                     <div><i class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-full p-2 -rotate-45 mr-2"></i></div>
                     <h3 class="text-3xl font-extrabold">Rinterio</h3>
                 </div>
-                <p class="text-[#737373] text-center lg:w-3/5 text-sm lg:text-base">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="text-[#737373] text-center lg:w-3/5 text-sm lg:text-base">At Rinterio, we pride ourselves on exceptional customer service, delivering high-quality construction solutions tailored to your unique needs and vision.</p>
                 <div class="list-none flex flex-col lg:flex-row items-center space-y-4 lg:space-y-0 cursor-pointer lg:space-x-5">
                     <li>Home</li>
                     <li>Services</li>
