--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                  </div>
 
                 <!-- collage -->
-                 <div class="grid grid-cols-1 lg:grid-cols-4 items-center lg:space-x-5 space-y-5">
+                 <div class="grid grid-cols-1 lg:grid-cols-5 items-center lg:space-x-5 space-y-5">
 
                     <!-- collage-one -->
                     <div class="flex flex-col lg:flex-row items-center lg:col-span-3 lg:space-x-3 space-y-3 border-solid border-2 border-[#E9E9E9] rounded-xl p-4">
@@ -179,28 +179,32 @@
                     </div>
 
                     <!-- collage-two -->
-                    <div class="border-solid border-2 border-[#E9E9E9] rounded-xl p-4 col-span-1">
+                    <div class="border-solid border-2 border-[#E9E9E9] rounded-xl p-4 col-span-1 md:col-span-2">
                         <img src="./assets/img2.png" alt=""  class="lg:w-[326px] lg:h-[179.3px] mx-auto">
                     </div>
 
                     <!-- collage-three -->
                     <div class="border-solid border-2 border-[#E9E9E9] rounded-xl p-4">
-                        <img src="./assets/img3.png" alt="" class="mx-auto">
+                        <img src="./assets/img3.png" alt="" class="mx-auto w-[350px] lg:w-full">
                     </div>
 
                     <!-- collage-four -->
-                    <div class="flex flex-col lg:flex-row items-center lg:col-span-2 lg:space-x-3  space-y-3 border-solid border-2 border-[#E9E9E9] rounded-xl p-4">
+                    <div class="flex flex-col lg:flex-row items-center lg:col-span-3 lg:space-x-3  space-y-3 border-solid border-2 border-[#E9E9E9] rounded-xl p-4">
                         <img src="./assets/img4.png" alt="" class="mx-auto">
                         <div>
                             <h5 class="text-2xl font-extrabold">Residential</h5>
-                            <p class="text-base font-medium text-[#737373] ">Creating dream homes with exceptional residential construction expertise.</p>
+                            <p class="text-base font-medium text-[#737373] lg:w-4/5">Creating dream homes with exceptional residential construction expertise.</p>
                             <a href="#" class="text-base font-bold">View Details <i class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-full p-2 -rotate-45 mr-2"></i></a>
                         </div>
                     </div>
 
                     <!-- collage-five -->
-                    <div class="border-solid border-2 border-[#E9E9E9] rounded-xl p-4"><img src="./assets/img5.png" alt="" class="mx-auto"></div>
+                    <div class="border-solid border-2 border-[#E9E9E9] rounded-xl p-4"><img src="./assets/img5.png" alt="" class="mx-auto w-[350px] lg:w-full"></div>
                  </div>
+
+                 <!-- collage-six -->
+                 <div class="md:hidden border-solid border-2 border-[#E9E9E9] rounded-xl p-4 mt-5"><img src="./assets/img3.png" alt="" class="mx-auto w-[350px] lg:w-full"></div>
+                </div>
             </div>
          </section>
         <!-- latest portfolio section end -->
