change popular section style

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
                     <!-- service one -->
                     <div class="flex items-center space-x-4 border-solid border-2 border-lime-500 p-5 rounded-xl shadow-xl">
-                        <div><img src="./icons/plan.png" alt="" class="w-16"></div>
+                        <div><img src="./icons/plan.png" alt="" class="w-16 bg-red-200 p-1 rounded-md"></div>
                         <div>
                             <h5 class="text-xl font-extrabold">Floor Plan Design</h5>
                             <p class="text-sm font-medium text-[#737373] ">Expert floor plan designs, tailored for your unique space and needs.</p>
@@ -281,7 +281,7 @@
 
                     <!-- service two -->
                     <div class="flex items-center space-x-4 border-solid border-2 border-lime-500 p-5 rounded-xl shadow-xl">
-                        <div><img src="./icons/blueprint.png" alt="" class="w-16"></div>
+                        <div><img src="./icons/blueprint.png" alt="" class="w-16 bg-red-200 p-1 rounded-md"></div>
                         <div>
                             <h5 class="text-xl font-extrabold">Construction Work</h5>
                             <p class="text-sm font-medium text-[#737373]">Reliable construction services, building quality structures with precision.</p>
@@ -290,7 +290,7 @@
 
                     <!-- service three -->
                     <div class="flex items-center space-x-4 border-solid border-2 border-lime-500 p-5 rounded-xl shadow-xl">
-                        <div><img src="./icons/interior-design.png" alt="" class="w-16"></div>
+                        <div><img src="./icons/interior-design.png" alt="" class="w-16 bg-red-200 p-1 rounded-md"></div>
                         <div>
                             <h5 class="text-xl font-extrabold">Interior Designing</h5>
                             <p class="text-sm font-medium text-[#737373]">Creative interior design solutions that transform spaces into stylish, functional environments.</p>
@@ -299,7 +299,7 @@
 
                     <!-- service four -->
                     <div class="flex items-center space-x-4 border-solid border-2 border-lime-500 p-5 rounded-xl shadow-xl">
-                        <div><img src="./icons/desk.png" alt="" class="w-16"></div>
+                        <div><img src="./icons/desk.png" alt="" class="w-16 bg-red-200 p-1 rounded-md"></div>
                         <div>
                             <h5 class="text-xl font-extrabold">Furniture Work</h5>
                             <p class="text-sm font-medium text-[#737373]">Custom furniture craftsmanship, enhancing spaces with quality pieces.</p>
@@ -308,7 +308,7 @@
 
                     <!-- service five -->
                     <div class="flex items-center space-x-4 border-solid border-2 border-lime-500 p-5 rounded-xl shadow-xl">
-                        <div><img src="./icons/building.png" alt="" class="w-16"></div>
+                        <div><img src="./icons/building.png" alt="" class="w-16 bg-red-200 p-1 rounded-md"></div>
                         <div>
                             <h5 class="text-xl font-extrabold">Architecture</h5>
                             <p class="text-sm font-medium text-[#737373]">Innovative architectural designs, creating visionary spaces with precision.</p>
@@ -317,7 +317,7 @@
 
                     <!-- service six -->
                     <div class="flex items-center space-x-4 border-solid border-2 border-lime-500 p-5 rounded-xl shadow-xl">
-                        <div><img src="./icons/support.png" alt="" class="w-16"></div>
+                        <div><img src="./icons/support.png" alt="" class="w-16 bg-red-200 p-1 rounded-md"></div>
                         <div>
                             <h5 class="text-xl font-extrabold">24X7 Support</h5>
                             <p class="text-sm font-medium text-[#737373]">Round-the-clock support, ensuring seamless service anytime, anywhere.</p>
